--- a/html/css/style_music.css
+++ b/html/css/style_music.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
 
 html {
@@ -19,7 +20,7 @@ scrollbar-width: none ;
 body{
 margin: 0 ;
 height: 100vh ;
-/* display: flex; */
+/* display:flex; */
 user-select: none ;
 align-items: center ;
 justify-content: center ;
@@ -47,22 +48,25 @@ justify-content: space-between ;
 .uppercase{
 text-transform: uppercase ;
 }
+
+
 .player {
 z-index: 2;
-position: absolute;
+/* position: absolute;
 top: 128%;
 right: 40%;
-transform: translate(0%, 0%);    
+transform: translate(0%, 0%);     */
 
-width: 17.15em ;
-display: flex ;
+width: 26.15em ;
+display:flex  ;
 overflow: hidden ;
-font-size: 1.22em ;
+font-size: 1.32em ;
 border-radius: 1.35em ;
 flex-direction: column ;
 background-color: white ;
 height: var(--parent-height) ;
 }
+
 .player__header {
 z-index: 1 ;
 gap: 0 .4em ;
@@ -79,12 +83,14 @@ padding: .95em 0.6em 0 1.2em ;
 box-shadow: 0 2px 6px 1px #0000001f ;
 transition: height var(--cubic-header), box-shadow var(--duration), padding var(--duration) ease-in-out ;
 }
+
 .player__header.open-header {
 height: 100% ;
 padding-left: 0 ;
 padding-right: 0 ;
 box-shadow: unset ;
 }
+
 .player__img {
 width: 3.22em ;
 height: 3.22em ;
@@ -95,6 +101,7 @@ top: 1.4em ;
 left: 1.2em ;
 position: absolute ;
 }
+
 .slider {
 flex-shrink: 0 ;
 overflow: hidden ;
