--- a/html/css/style_music.css
+++ b/html/css/style_music.css
@@ -52,10 +52,10 @@ text-transform: uppercase ;
 
 .player {
 z-index: 2;
-/* position: absolute;
-top: 128%;
-right: 40%;
-transform: translate(0%, 0%);     */
+position: absolute;
+top: 87%;
+right: 50%;
+transform: translate(50%, 50%);    
 
 width: 26.15em ;
 display:flex  ;
