--- a/html/css/movie.css
+++ b/html/css/movie.css
@@ -1,19 +1,18 @@
 .hero-thumbnail {
-    position: relative;
+    position:relative;
     width: 100%;
     height: 100vh; /* 這裡設定為螢幕高度，你可以根據需要調整 */
     /* overflow: hidden; 隱藏超出範圍的部分 */
 }
 
 .hero-thumbnail video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */
+  position: absolute;
+  left:0;
+  top:0px;
+  width: 200%;
+  height: 100%;
+  object-fit:inherit;
+  z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */
 }
 
 /*點選圖片出現視窗*/
