update: movie.css
update: RWD 882px 
.hero-thumbnail video

--- a/html/css/movie.css
+++ b/html/css/movie.css
@@ -22,8 +22,16 @@
   object-fit:inherit;
   z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */ } 
   }
-
-
+  @media only screen and (max-width: 882px) {
+    .hero-thumbnail video {
+    position:absolute;  
+    width: 200%;
+    height: auto;
+    object-fit:inherit;
+    z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */ } 
+    }
+  
+  
 
 /*點選圖片出現視窗*/
 #video-container {
