update: movie.css
update: RWD

--- a/html/css/movie.css
+++ b/html/css/movie.css
@@ -1,42 +1,13 @@
-.hero-thumbnail {
-    position:relative;
-    width: 100%;
-    height: 100vh; /* 這裡設定為螢幕高度，你可以根據需要調整 */
-    /* overflow: hidden; 隱藏超出範圍的部分 */
-}
-
-.hero-thumbnail video {
+#Remakevideo{
   position: absolute;
-  left:0;
-  top:0px;
-  width: 200%;
-  height: 100%;
-  object-fit:inherit;
+  max-width: 100%;
+  background-size: cover;
   z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */
 }
-
-@media only screen and (max-width: 767px) {
-  .hero-thumbnail video {
-  max-width: 100%;
-  height: auto;
-  object-fit:inherit;
-  z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */ } 
-  }
-  @media only screen and (max-width: 1099px) {
-    .hero-thumbnail video {
-    position:absolute;  
-    width: 200%;
-    height: auto;
-    object-fit:inherit;
-    z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */ } 
-    }
-  
-  
 
 /*點選圖片出現視窗*/
 #video-container {
     display: none;
-
     position: fixed; 
     top: 50%;
     left: 50%;
