--- a/html/css/movie.css
+++ b/html/css/movie.css
@@ -1,8 +1,12 @@
 #Remakevideo{
   position: absolute;
-  max-width: 100%;
-  background-size: cover;
-  z-index: -3; /* 將影片設定為背景，並將z-index設定為-1，以確保其他內容位於其上 */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+  
 }
 
 /*點選圖片出現視窗*/
