--- a/html/css/movie.css
+++ b/html/css/movie.css
@@ -1,12 +1,10 @@
 #Remakevideo{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position:absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
 
 /*點選圖片出現視窗*/
@@ -107,3 +105,13 @@
   font-size: 50px;
   transform:scale(1.0,1.0);
 }
+
+
+div.gallery-content h4,
+div.gallery-content p {
+    font-size: 16px;
+    height: 4rem; /* 固定高度为三行文本的高度 */
+    line-height: 1rem; /* 行高与文字大小一致 */
+    overflow: hidden; /* 隐藏溢出部分 */
+}
+
